# maniml_local

./: CHANGELOG.md  CHECKPOINT_RESTRUCTURE_SUMMARY.md  CHECKPOINT_SYSTEM.md  CLAUDE.md  CONTRIBUTING.md  Checkpoint System Implementation Plan  FILE_WATCHER_BACKGROUND.md  INSTALLATION.md  LICENSE  README.md  TROUBLESHOOTING.md  checkpoint_deepcopy_plan.md  checkpoint_implementation.md  checkpoint_implementation_summary.md  checkpoint_spec  checkpoint_stale_reference_fix_summary.md  checkpoint_structure.rtf  debug_checkpoints.py  old_spec  pyproject.toml  setup.py  setup.sh  test_animate_simple.py  test_animation_count.py  test_animation_replay.py  test_arrows.py  test_auto_reload.py  test_basic_checkpoint.py  test_checkpoint_0_code.py  test_checkpoint_0_debug.py  test_checkpoint_0_execution.py  test_checkpoint_debug.py  test_checkpoint_demo.py  test_checkpoint_navigation.py  test_checkpoint_simple.py  test_complex_animations.py  test_debug_replay.py  test_debug_scale.py  test_duplicate_debug.py  test_duplicate_objects.py  (+23 more)
docs/: ARCHITECTURE.md  SUCCESS.md
docs/development/: ANIMATION_REFERENCE.md  AUTO_RELOAD_FEATURES.md  AUTO_RELOAD_IMPLEMENTATION.md  DEBUG_SUMMARY.md  FINAL_IMPLEMENTATION.md  GRAPH_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PLOTTING_TEST_SUMMARY.md  SIMPLIFIED_AUTO_RELOAD.md  latex_fix_summary.md  maniml_test_summary.md
examples/: README.md
examples/01_getting_started/: 01_hello_world.py  02_shapes_and_colors.py  03_animation_basics.py  README.md
examples/02_interactive_objects/: 01_draggable_shapes.py  02_draggable_demo.py  03_mouse_events.py  README.md
examples/03_3d_animations/: 01_basic_3d_shapes.py  02_camera_movement.py  03_surface_plots.py  README.md
examples/04_advanced_techniques/: 01_api_differences.py  02_custom_objects.py  03_development_workflow.py  README.md
examples/3d/: advanced_3d_scene.py  comprehensive_3d.py
examples/advanced/: accumulation_animation.py  adaptive_buffer_demo.py  advanced_plotting.py  axis_features_demo.py  axis_label_comparison.py  axis_labels_extended.py  axis_labels_with_arrows.py  axis_showcase.py  comprehensive_axis_demo.py  correct_axis_labels.py  edge_cases_demo.py  feature_showcase.py  function_plotting.py  graph_animations.py  plotting_showcase.py  real_world_example.py
examples/interactive/: draggable_shapes_demo.py  interactive_3d_scene.py  interactive_basics.py  interactive_bezier.py  interactive_demo.py  interactive_triangle.py  motion_mobject_basics.py  mouse_tracking_demo.py
maniml/: __init__.py  __main__.py  constants.py
maniml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maniml/animation/: __init__.py  composition.py  creation.py  fading.py  growing.py  indication.py  movement.py  transform.py
maniml/camera/: __init__.py  camera.py
maniml/manimgl_core/: __init__.py  config.py  constants.py  module_loader.py  shader_wrapper.py  tex_templates.yml  window.py
maniml/mobject/: __init__.py  coordinate_systems.py  geometry.py  tex.py  (+6 more)
tests/: README.md
(+70 files in other folders)
