[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maniml"
version = "0.1.0"
description = "Standalone Manim for Mathematical Animations"
readme = "README.md"
authors = [
    {name = "maniml Contributors", email = ""},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["animation", "mathematics", "manim", "visualization", "education"]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "moderngl>=5.6.0",
    "moderngl-window>=2.4.0",
    "pillow>=8.0.0",
    "scipy>=1.5.0",
    "colour>=0.1.5",
    "pydub>=0.25.0",
    "pygments>=2.6.0",
    "pyperclip>=1.8.0",
    "IPython>=7.0.0",
    "PyYAML>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/maniml"
Documentation = "https://maniml.readthedocs.io"
Repository = "https://github.com/yourusername/maniml.git"
"Bug Tracker" = "https://github.com/yourusername/maniml/issues"
Changelog = "https://github.com/yourusername/maniml/blob/main/CHANGELOG.md"

[project.scripts]
maniml = "maniml.__main__:main"

[tool.setuptools]
packages = ["maniml"]

[tool.setuptools.package-data]
maniml = [
    "*.yml",
    "*.yaml",
    "manimgl_core/shaders/**/*.glsl",
    "manimgl_core/tex_templates.yml",
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moderngl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydub.*"
ignore_missing_imports = true